[split (java)] feat(bench): add latency distribution simulation to all runtimes